--- a/MerControle/nbproject/private/private.properties
+++ b/MerControle/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/mariane/.netbeans/25/build.properties
+user.properties.file=/home/murphy/.netbeans/25/build.properties
