--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
                 <artifactId>mysql-connector-j</artifactId>
                 <version>8.0.33</version>
             </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>2.2.224</version>
+            </dependency>
         </dependencies>
 
     <build>
