--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
                 <artifactId>h2</artifactId>
                 <version>2.2.224</version>
             </dependency>
+            
+            <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>itextpdf</artifactId>
+                <version>5.5.13.3</version>
+            </dependency>
         </dependencies>
 
     <build>
